# ur50_lidar

./: README.md  new lidars notes
ur50_lidar/: CMakeLists.txt  package.xml
ur50_lidar_decoder/: CMakeLists.txt  package.xml
ur50_lidar_decoder/include/ur50_lidar_decoder/: ur50_lidar_decoder.h
ur50_lidar_decoder/launch/: ur50_lidar.launch  ur50_lidar_config.launch  ur50_lidar_double.launch  ur50_lidar_twelve.launch
ur50_lidar_decoder/src/: ur50_lidar_decoder.cpp  ur50_lidar_decoder_node.cpp
ur50_lidar_driver/: CMakeLists.txt  package.xml
ur50_lidar_driver/include/ur50_lidar_driver/: ur50_lidar_driver.h
ur50_lidar_driver/launch/: ur50_lidar_driver_nodelet.launch
ur50_lidar_driver/src/: ur50_lidar_driver.cc  ur50_lidar_driver_node.cc
ur50_lidar_msgs/: CMakeLists.txt  package.xml
